# itrees

./: .gitignore  Cargo.toml
benches/: bench.rs
programs/: alloc_big_tree.ic  dec_bits.ic  dec_bits_comp.ic  dec_bits_tree.ic  dec_bits_tree_comp.ic  dec_bits_tree_wip.ic
src/: lib.rs  main.rs  net.rs  node.rs  parse.rs  print.rs  ref.rs  tree.rs  utils.rs  word.rs
