[package]
name = "itrees"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "itrees"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "must_cast"] }
logos = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
